--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
          </div>
 
          <!--==================== LOGIN ====================-->
+
          <div class="login grid" id="login-content">
             <form action="" class="login__form grid">
-               <h3 class="login title">Log In</h3>
+               <h3 class="login__group grid">Log In</h3>
 
                <div class="login__group grid">
                   <label for="ligin-email" class="login__label">Email</label>
                   <input type="email" placeholder="Write your email" id="ligin-email" class="login__input">
                </div>
-
                
                <div class="login__group grid">
                   <label for="login-pass" class="login__label">Password</label>
@@ -118,14 +118,16 @@
                      You do not have an account? <a href="#">Sign up</a>
                   </span>
 
-                  <a href="#" class="login__forgot">
-                     You forgot your password
-                  </a>
+                     <a href="#" class="login__forgot">
+                        You forgot your password
+                     </a>
+                     <button type="submit" class="login__button button">
+                        Log In
+                     </button>
 
-                  <a href="#" class="login__button button">Log In</a>
                </div>
+               
             </form>
-
             <i class="ri-close-line login__close" id="login__close"></i>
          </div>
 
