--- a/index.html
+++ b/index.html
@@ -128,14 +128,29 @@
                </div>
                
             </form>
-            <i class="ri-close-line login__close" id="login__close"></i>
+            <i class="ri-close-line login__close" id="login-close"></i>
          </div>
 
          <!--==================== MAIN ====================-->
          <main class="main">
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
-               
+               <div class="home__container container grid">
+                  <div class="home__data">
+                     <h1 class="home__title">
+                        Browse & <br>
+                        Select E-Books
+                     </h1>
+
+                     <p class="home__description">
+                        Find the best e-books from your favorite
+                        writers, explore hundreds of books with all
+                        possible categories, take advantage of the
+                        50% discount and much more.
+                     </p>
+                     <a href="#" class="button">Explore Now</a>
+                  </div>
+               </div>
             </section>
 
             <!--==================== SERVICES ====================-->
