novas atualizações js

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                <div class="nav__actions">
                <!-- Botao de Pesquisa/search button -->
-               <i class="ri-search-line search-button" id="search-button"></i>
+               <i class="ri-search-line search-button" id="procurar-button"></i>
 
                <!-- Botao de login usuario/login-button (11:09m)-->
                <i class="ri-user-line login-button" id="login-button"></i>
