novas imagens com sombreamento e slides js e css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css">
 
       <!--=============== SWIPER CSS ===============-->
-      <link rel="stylesheet" href="">
+      <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
@@ -62,7 +62,7 @@
                            <span>Testimonial</span>
                         </a>
                      </li>
-
+                     <!-- https://api.whatsapp.com/send/?phone=5531975340765&text&type=phone_number&app_absent=0 -->
                      <li class="nav__item">
                         <a href="https://api.whatsapp.com/send/?phone=5531975340765&text&type=phone_number&app_absent=0" class="nav__link">
                            <i class="ri-whatsapp-line"></i>
@@ -138,8 +138,8 @@
                <div class="home__container container grid">
                   <div class="home__data">
                      <h1 class="home__title">
-                        Browse & <br>
-                        Select E-Books
+                        Navegue & <br>
+                        Selecione seu Produto Digital
                      </h1>
 
                      <p class="home__description">
@@ -153,20 +153,20 @@
 
                   <div class="home__images">
                      <div class="home__swiper swiper">
-                        <div>
-                           <article class="home__article">
+                        <div class="swiper-wrapper">
+                           <article class="home__article swiper-slide">
                               <img src="assets/img/1.png" alt="" class="home__img">
                            </article>
 
-                           <article class="home__article">
+                           <article class="home__article swiper-slide">
                               <img src="assets/img/2.png" alt="" class="home__img">
                            </article>
 
-                           <article class="home__article">
+                           <article class="home__article swiper-slide">
                               <img src="assets/img/3.png" alt="" class="home__img">
                            </article>
 
-                           <article class="home__article">
+                           <article class="home__article swiper-slide">
                               <img src="assets/img/4.png" alt="" class="home__img">
                            </article>
                         </div>
@@ -219,7 +219,7 @@
          <script src=""></script>
 
          <!--=============== SWIPER JS ===============-->
-         <script src=""></script>
+         <script src="assets/js/swiper-bundle.min.js"></script>
 
          <!--=============== MAIN JS ===============-->
          <script src="assets/js/main.js"></script>
