--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                      </li>
                      <!-- https://api.whatsapp.com/send/?phone=5531975340765&text&type=phone_number&app_absent=0 -->
                      <li class="nav__item">
-                        <a href="https://api.whatsapp.com/send/?phone=5531975340765&text&type=phone_number&app_absent=0" class="nav__link">
+                        <a href="https://api.whatsapp.com/send/?phone=5531975340765&text&type=phone_number&app_absent=0" target="_blank" class="nav__link">
                            <i class="ri-whatsapp-line"></i>
                            <span>WhatsApp</span>
                         </a>
@@ -177,8 +177,27 @@
             </section>
 
             <!--==================== SERVICES ====================-->
+            <!-- <i class="ri-inbox-archive-line"></i> /  -->
             <section class="services section">
-               
+               <div class="services__container container grid">
+                  <article class="services__card">
+                     <i class="ri-inbox-archive-line"></i>
+                     <h3 class="services__title">Digital media</h3>
+                     <p class="services__description">Digital product</p>
+                  </article>
+
+                  <article class="services__card">
+                     <i class="ri-lock-2-line"></i>
+                     <h3 class="services__title">Secure Payment</h3>
+                     <p class="services__description">100% Secure Payment</p>
+                  </article>
+
+                  <article class="services__card">
+                     <i class="ri-customer-service-2-line"></i>
+                     <h3 class="services__title">Support</h3>
+                     <p class="services__description">Call us anytime</p>
+                  </article>
+               </div>
             </section>
 
             <!--==================== FEATURED ====================-->
