--- a/index.html
+++ b/index.html
@@ -207,7 +207,178 @@
 
             <!--==================== DISCOUNT ====================-->
             <section class="discount section" id="discount">
-               
+               <h2 class="section__title">
+                  Featured Books
+               </h2>
+
+               <div class="featured__container container">
+                  <div class="featured__swiper">
+                     <div>
+                        <!-- Livro 01 -->
+                        <article class="fatured__card">
+                           <img src="assets/img/1.png" alt="image" class="featured__img">
+
+                           <h2 class="featured__title">Featured Books</h2>
+                           <div class="featured__prices">
+                              <span class="featured__discount">R$ 15,00</span>
+                              <span class="featured__price">R$ 19,99</span>
+                           </div>
+
+                           <button class="button">Add To Cart</button>
+
+                           <div class="featured__actions">
+                              <button><i class="ri-search-line"></i></button>
+                              <button><i class="ri-heart-3-line"></i></button>
+                              <button><i class="ri-eye-line"></i></button>
+                           </div>
+                        </article>
+                        <!-- Livro 02 -->
+                        <article class="fatured__card">
+                           <img src="assets/img/2.png" alt="image" class="featured__img">
+
+                           <h2 class="featured__title">Featured Books</h2>
+                           <div class="featured__prices">
+                              <span class="featured__discount">R$ 15,00</span>
+                              <span class="featured__price">R$ 19,99</span>
+                           </div>
+
+                           <button class="button">Add To Cart</button>
+
+                           <div class="featured__actions">
+                              <button><i class="ri-search-line"></i></button>
+                              <button><i class="ri-heart-3-line"></i></button>
+                              <button><i class="ri-eye-line"></i></button>
+                           </div>
+                        </article>
+                        <!-- Livro 03 -->
+                        <article class="fatured__card">
+                           <img src="assets/img/3.png" alt="image" class="featured__img">
+
+                           <h2 class="featured__title">Featured Books</h2>
+                           <div class="featured__prices">
+                              <span class="featured__discount">R$ 15,00</span>
+                              <span class="featured__price">R$ 19,99</span>
+                           </div>
+
+                           <button class="button">Add To Cart</button>
+
+                           <div class="featured__actions">
+                              <button><i class="ri-search-line"></i></button>
+                              <button><i class="ri-heart-3-line"></i></button>
+                              <button><i class="ri-eye-line"></i></button>
+                           </div>
+                        </article>
+                        <!-- Livro 04 -->
+                        <article class="fatured__card">
+                           <img src="assets/img/4.png" alt="image" class="featured__img">
+
+                           <h2 class="featured__title">Featured Books</h2>
+                           <div class="featured__prices">
+                              <span class="featured__discount">R$ 15,00</span>
+                              <span class="featured__price">R$ 19,99</span>
+                           </div>
+
+                           <button class="button">Add To Cart</button>
+
+                           <div class="featured__actions">
+                              <button><i class="ri-search-line"></i></button>
+                              <button><i class="ri-heart-3-line"></i></button>
+                              <button><i class="ri-eye-line"></i></button>
+                           </div>
+                        </article>
+                        <!-- Livro 05 -->
+                        <article class="fatured__card">
+                           <img src="assets/img/5.png" alt="image" class="featured__img">
+
+                           <h2 class="featured__title">Featured Books</h2>
+                           <div class="featured__prices">
+                              <span class="featured__discount">R$ 15,00</span>
+                              <span class="featured__price">R$ 19,99</span>
+                           </div>
+
+                           <button class="button">Add To Cart</button>
+
+                           <div class="featured__actions">
+                              <button><i class="ri-search-line"></i></button>
+                              <button><i class="ri-heart-3-line"></i></button>
+                              <button><i class="ri-eye-line"></i></button>
+                           </div>
+                        </article>
+                        <!-- Livro 06 -->
+                        <article class="fatured__card">
+                           <img src="assets/img/6.png" alt="image" class="featured__img">
+
+                           <h2 class="featured__title">Featured Books</h2>
+                           <div class="featured__prices">
+                              <span class="featured__discount">R$ 15,00</span>
+                              <span class="featured__price">R$ 19,99</span>
+                           </div>
+
+                           <button class="button">Add To Cart</button>
+
+                           <div class="featured__actions">
+                              <button><i class="ri-search-line"></i></button>
+                              <button><i class="ri-heart-3-line"></i></button>
+                              <button><i class="ri-eye-line"></i></button>
+                           </div>
+                        </article>
+                        <!-- Livro 07 -->
+                        <article class="fatured__card">
+                           <img src="assets/img/7.png" alt="image" class="featured__img">
+
+                           <h2 class="featured__title">Featured Books</h2>
+                           <div class="featured__prices">
+                              <span class="featured__discount">R$ 15,00</span>
+                              <span class="featured__price">R$ 19,99</span>
+                           </div>
+
+                           <button class="button">Add To Cart</button>
+
+                           <div class="featured__actions">
+                              <button><i class="ri-search-line"></i></button>
+                              <button><i class="ri-heart-3-line"></i></button>
+                              <button><i class="ri-eye-line"></i></button>
+                           </div>
+                        </article>
+                        <!-- Livro 08 -->
+                        <article class="fatured__card">
+                           <img src="assets/img/8.png" alt="image" class="featured__img">
+
+                           <h2 class="featured__title">Featured Books</h2>
+                           <div class="featured__prices">
+                              <span class="featured__discount">R$ 15,00</span>
+                              <span class="featured__price">R$ 19,99</span>
+                           </div>
+
+                           <button class="button">Add To Cart</button>
+
+                           <div class="featured__actions">
+                              <button><i class="ri-search-line"></i></button>
+                              <button><i class="ri-heart-3-line"></i></button>
+                              <button><i class="ri-eye-line"></i></button>
+                           </div>
+                        </article>
+                        <!-- Livro 09 -->
+                        <article class="fatured__card">
+                           <img src="assets/img/9.png" alt="image" class="featured__img">
+
+                           <h2 class="featured__title">Featured Books</h2>
+                           <div class="featured__prices">
+                              <span class="featured__discount">R$ 15,00</span>
+                              <span class="featured__price">R$ 19,99</span>
+                           </div>
+
+                           <button class="button">Add To Cart</button>
+
+                           <div class="featured__actions">
+                              <button><i class="ri-search-line"></i></button>
+                              <button><i class="ri-heart-3-line"></i></button>
+                              <button><i class="ri-eye-line"></i></button>
+                           </div>
+                        </article>
+                     </div>
+                  </div>
+               </div>
             </section>
 
             <!--==================== NEW BOOKS ====================-->
