Atualização css e html

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                   <div class="featured__swiper">
                      <div>
                         <!-- Livro 01 -->
-                        <article class="fatured__card">
+                        <article class="featured__card">
                            <img src="assets/img/1.png" alt="image" class="featured__img">
 
                            <h2 class="featured__title">Featured Books</h2>
@@ -233,7 +233,7 @@
                            </div>
                         </article>
                         <!-- Livro 02 -->
-                        <article class="fatured__card">
+                        <article class="featured__card">
                            <img src="assets/img/2.png" alt="image" class="featured__img">
 
                            <h2 class="featured__title">Featured Books</h2>
@@ -251,7 +251,7 @@
                            </div>
                         </article>
                         <!-- Livro 03 -->
-                        <article class="fatured__card">
+                        <article class="featured__card">
                            <img src="assets/img/3.png" alt="image" class="featured__img">
 
                            <h2 class="featured__title">Featured Books</h2>
@@ -269,7 +269,7 @@
                            </div>
                         </article>
                         <!-- Livro 04 -->
-                        <article class="fatured__card">
+                        <article class="featured__card">
                            <img src="assets/img/4.png" alt="image" class="featured__img">
 
                            <h2 class="featured__title">Featured Books</h2>
@@ -287,7 +287,7 @@
                            </div>
                         </article>
                         <!-- Livro 05 -->
-                        <article class="fatured__card">
+                        <article class="featured__card">
                            <img src="assets/img/5.png" alt="image" class="featured__img">
 
                            <h2 class="featured__title">Featured Books</h2>
@@ -305,7 +305,7 @@
                            </div>
                         </article>
                         <!-- Livro 06 -->
-                        <article class="fatured__card">
+                        <article class="featured__card">
                            <img src="assets/img/6.png" alt="image" class="featured__img">
 
                            <h2 class="featured__title">Featured Books</h2>
@@ -323,7 +323,7 @@
                            </div>
                         </article>
                         <!-- Livro 07 -->
-                        <article class="fatured__card">
+                        <article class="featured__card">
                            <img src="assets/img/7.png" alt="image" class="featured__img">
 
                            <h2 class="featured__title">Featured Books</h2>
@@ -341,7 +341,7 @@
                            </div>
                         </article>
                         <!-- Livro 08 -->
-                        <article class="fatured__card">
+                        <article class="featured__card">
                            <img src="assets/img/8.png" alt="image" class="featured__img">
 
                            <h2 class="featured__title">Featured Books</h2>
@@ -359,7 +359,7 @@
                            </div>
                         </article>
                         <!-- Livro 09 -->
-                        <article class="fatured__card">
+                        <article class="featured__card">
                            <img src="assets/img/9.png" alt="image" class="featured__img">
 
                            <h2 class="featured__title">Featured Books</h2>
