consertando os problemas do slide

--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@
                      <div class="home__swiper swiper">
                         <div class="swiper-wrapper">
                            <article class="home__article swiper-slide">
-                              <img src="assets/img/1.png" alt="" class="home__img">
+                              <img src="assets/img/1.png" alt="image" class="home__img">
                            </article>
 
                            <article class="home__article swiper-slide">
-                              <img src="assets/img/2.png" alt="" class="home__img">
+                              <img src="assets/img/2.png" alt="image" class="home__img">
                            </article>
 
                            <article class="home__article swiper-slide">
-                              <img src="assets/img/3.png" alt="" class="home__img">
+                              <img src="assets/img/3.png" alt="image" class="home__img">
                            </article>
 
                            <article class="home__article swiper-slide">
-                              <img src="assets/img/4.png" alt="" class="home__img">
+                              <img src="assets/img/4.png" alt="image" class="home__img">
                            </article>
                         </div>
                      </div>
@@ -212,7 +212,7 @@
                </h2>
 
                <div class="featured__container container">
-                  <div class="swiper">
+                  <div class="swiper-featured">
                      <div class="swiper-wrapper">
                         <!-- Livro 01 -->
                         <article class="featured__card swiper-slide">
